# whispbook

./: .dockerignore  .gitignore  .prettierignore  LICENSE  README.md  docker-compose.yml  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
.github/workflows/: backend-tests.yml  ci.yml  frontend-tests.yml  release.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  capabilities.py  ffmpeg.py  jobs.py  main.py  models.py  storage.py  subtitles.py  text_processing.py  tts.py
backend/scripts/: import_chatterbox_voices.py
backend/tests/: conftest.py  test_annotations.py  test_book_updates.py  test_custom_styles.py  test_document_import.py  test_generation_streaming.py  test_import_chatterbox_voices.py  test_storage.py  test_subtitles.py  test_text_processing.py  test_tts.py
public/: manifest.webmanifest  sw.js
src/: App.test.tsx  App.tsx  main.tsx  styles.css  types.ts  voices.ts  writer-desk.css
src/hooks/: usePiperPlayback.ts  useSpeechPlayback.test.ts  useSpeechPlayback.ts  useSpeechVoices.ts
src/lib/: api.ts  bookLibrary.test.ts  bookLibrary.ts  (+19 more)
voice_styles/: librivox-1168-chatterbox-turbo.json  librivox-1168-chatterbox.json  librivox-175-chatterbox-turbo.json  librivox-175-chatterbox.json  librivox-3490-chatterbox-turbo.json  librivox-3490-chatterbox.json  librivox-5618-chatterbox-turbo.json  librivox-5618-chatterbox.json  librivox-6376-chatterbox-turbo.json  librivox-6376-chatterbox.json  librivox-9557-chatterbox-turbo.json  librivox-9557-chatterbox.json
(+6 files in other folders)
