[project]
name = "whispbook-backend"
version = "0.1.0"
description = "FastAPI backend for Whispbook."
requires-python = ">=3.10,<3.14"
dependencies = [
  "chatterbox-tts>=0.1.7",
  "fastapi>=0.115.0",
  "kokoro>=0.9.4",
  "markitdown[docx,pdf,pptx,xls,xlsx]>=0.1.5",
  "numpy>=1.26.4",
  "pydantic>=2.8.0",
  "python-multipart>=0.0.9",
  "setuptools<82",
  "soundfile>=0.12.1",
  "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.8.0",
]

[tool.uv]
package = false
